<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/timer_record"
            layout="@layout/timer_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_timer"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_pause_sleep"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/btn_round_corner"
            android:drawableStart="@drawable/baseline_play_40dp"
            android:paddingStart="10dp"
            android:text="@string/start"
            android:textColor="@color/btn_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_sleep"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_round_corner"
            android:drawableStart="@drawable/baseline_reset_40dp"
            android:text="@string/reset"
            android:textColor="@color/btn_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/duration"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/image_timer"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_for_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_access_time_black_50dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="30dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/my_note"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/title_note"
            app:layout_constraintStart_toStartOf="@+id/title_note"
            app:layout_constraintTop_toBottomOf="@+id/title_note">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sleeping_note"
                style="g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_my_note_here" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/timer_value_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:text="00:00:00"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>